--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 # Byte-compiled / optimized / DLL files
+checkpoints
+results
+chest_xray_new
+.idea
 __pycache__/
 *.py[cod]
 *$py.class
@@ -127,3 +131,7 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+
+
+
